beginning of username and password input authentication.